Test/git-issues/git-issue-276b.dfy.expect
git-issue-276b.dfy(5,10): Error: const definition contains a cycle: B -> A
1 resolution/type errors detected in git-issue-276b.dfy
